# haskell-scotty-practice

./: DB.hs  Main.hs  README.md  haskell-scotty-practice.cabal
