name:          haskell-scotty-practice
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          haskell-scotty-practice
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    other-modules: DB
    build-depends:  base   >= 4      && < 5
                  , text
                  , scotty
                  , opaleye
                  , product-profunctors
                  , postgresql-simple